Move back to base url

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: twocentstudios
 email: chris@twocentstudios.com
 description: > # this means to ignore newlines until "baseurl:"
   A coding blog covering iOS, Swift, and other programming topics.
-baseurl: "/blog" # the subpath of your site, e.g. /blog/
+baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://twocentstudios.com" # the base hostname & protocol for your site
 twitter_username: twocentstudios
 github_username:  twocentstudios
