Change permalink to ymdtitle

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,9 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://twocentstudios.com" # the base hostname & protocol for your site
 twitter_username: twocentstudios
 github_username:  twocentstudios
+timezone: America/Chicago
+encoding: utf-8
 
 # Build settings
 markdown: kramdown
+permalink: /:year/:month/:day/:title
