Add rouge to kramdown

--- a/_config.yml
+++ b/_config.yml
@@ -11,5 +11,9 @@ timezone: America/Chicago
 encoding: utf-8
 
 # Build settings
-markdown: kramdown
 permalink: /:year/:month/:day/:title
+markdown: kramdown
+
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
