Fix code background color for backticks

--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ encoding: utf-8
 # Build settings
 permalink: /:year/:month/:day/:title
 markdown: kramdown
+highlighter: rouge
 
 kramdown:
   input: GFM
