--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://twocentstudios.com" # the base hostname & protocol for your site
 twitter_username: twocentstudios
 github_username:  twocentstudios
+google_analytics_tracking_id: UA-10207350-1
 timezone: America/Chicago
 encoding: utf-8
 
