--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ google_analytics_tracking_id: UA-10207350-1
 timezone: America/Chicago
 encoding: utf-8
 include: .nojekyll
+exclude: [ deploy.sh, Gemfile, Gemfile.lock ]
 
 # Build settings
 permalink: /:year/:month/:day/:title
