--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ github_username:  twocentstudios
 google_analytics_tracking_id: UA-10207350-1
 timezone: America/Chicago
 encoding: utf-8
-include: [ .nojekyll ]
 exclude: [ deploy.sh, Gemfile, Gemfile.lock ]
+keep_files: [ .nojekyll, .git ]
 
 # Build settings
 permalink: /:year/:month/:day/:title
