add new.sh to exclude

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ github_username:  twocentstudios
 google_analytics_tracking_id: UA-10207350-1
 timezone: America/Chicago
 encoding: utf-8
-exclude: [ deploy.sh, Gemfile, Gemfile.lock, _design, _legacy ]
+exclude: [ deploy.sh, new.sh, Gemfile, Gemfile.lock, _design, _legacy ]
 keep_files: [ .nojekyll, .git ]
 
 # Build settings
