add trailing slash to all posts

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ exclude: [ deploy.sh, new.sh, Gemfile, Gemfile.lock, _design, _legacy ]
 keep_files: [ .nojekyll, .git ]
 
 # Build settings
-permalink: /:year/:month/:day/:title
+permalink: /:year/:month/:day/:title/
 markdown: kramdown
 highlighter: rouge
 
