deploy future posts

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ timezone: America/Chicago
 encoding: utf-8
 exclude: [ deploy.sh, new.sh, Gemfile, Gemfile.lock, _design, _legacy ]
 keep_files: [ .nojekyll, .git ]
+future: true
 
 # Build settings
 permalink: /:year/:month/:day/:title/
