--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: chris@twocentstudios.com
 description: > # this means to ignore newlines until "baseurl:"
   A coding blog covering iOS, Swift, and other programming topics.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://twocentstudios.com" # the base hostname & protocol for your site
+url: "https://twocentstudios.com" # the base hostname & protocol for your site
 twitter_username: twocentstudios
 github_username:  twocentstudios
 timezone: America/Chicago
