Change back timezone because it breaks post slugs

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://twocentstudios.com" # the base hostname & protocol for your site
 twitter_username: twocentstudios
 github_username:  twocentstudios
-timezone: Asia/Tokyo
+timezone: America/Chicago # careful: this changes post dates in slugs
 encoding: utf-8
 exclude: [ deploy.sh, new.sh, Gemfile, Gemfile.lock, _design, _legacy, README.md ]
 keep_files: [ .nojekyll, .git ]
