single line description to fix rss

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 # Site settings
 title: twocentstudios
 email: chris@twocentstudios.com
-description: > # this means to ignore newlines until "baseurl:"
-  A coding blog covering iOS, Swift, and other programming topics.
+description: A coding blog covering iOS, Swift, and other programming topics.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://twocentstudios.com" # the base hostname & protocol for your site
 twitter_username: twocentstudios
